--- a/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
+++ b/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
@@ -82,7 +82,7 @@
 
                 <div class="row mb-2">
                     <div class="col-lg-6 col-md-3 text-center">
-                        <p class="offerText"><strong>Estimated Delivery Time:</strong> @Model.DeliveryTime.ToString(@"d\.hh\:mm")</p>
+                        <p class="offerText"><strong>Estimated Delivery Time:</strong> @Model.DeliveryTime.ToString(@"d\.hh\:mm") hour:min</p>
                     </div>
                     <div class="col-lg-6 col-md-3 text-center">
                         <p class="offerText"><strong>Estimated Revenue:</strong> @Model.Revenue</p>
