--- a/Areas/Admin/Views/ProductTypes/Delete.cshtml
+++ b/Areas/Admin/Views/ProductTypes/Delete.cshtml
@@ -1,11 +1,15 @@
 ﻿@model OnlineShop.Models.ProductTypes
 
-<br />
+<div class="container">
+    <button class="btn btn-secondary ProductCategory-back-btn" onclick="window.history.back();">
+        <i class="fa-solid fa-arrow-left"></i> Back
+    </button>
+
 
 <div class="row">
     <div class="col-lg-3"></div>
     <div class="col-lg-6">
-        <h3 class="text-info">Delete Product Type</h3>
+        <h4 class="text-info">Delete Product Type</h4>
         <br />
         <form asp-action="Delete" method="post">
             <div class="card">
@@ -26,6 +30,7 @@
         </form>
     </div>
     <div class="col-lg-3"></div>
+</div>
 </div>
 
 
