--- a/Areas/Admin/Views/ProductTypes/Edit.cshtml
+++ b/Areas/Admin/Views/ProductTypes/Edit.cshtml
@@ -1,7 +1,10 @@
 ﻿@model OnlineShop.Models.ProductTypes
 
 
-<br />
+<div class="container">
+    <button class="btn btn-secondary ProductCategory-back-btn" onclick="window.history.back();">
+        <i class="fa-solid fa-arrow-left"></i> Back
+    </button>
 <div class="row">
 
     <div class="col-lg-3"></div>
@@ -31,6 +34,7 @@
     </div>
 
     <div class="col-lg-3"></div>
+</div>
 </div>
 
 
