--- a/Areas/Admin/Views/SpecialTag/Create.cshtml
+++ b/Areas/Admin/Views/SpecialTag/Create.cshtml
@@ -2,29 +2,28 @@
 @model OnlineShop.Models.SpecialTag
 @{
 }
+<div class="container ">
+    <button class="btn btn-secondary ProductCategory-back-btn" onclick="window.history.back();">
+        <i class="fa-solid fa-arrow-left"></i> Back
+    </button>
 
-<br />
-<br />
-
-
-
+    <div class="container ProductCategory-container">
 
 <div class="row">
 
     <div class="col-lg-3"></div>
 
     <div class="col-lg-6">
-        <h3 class="text-info mt-10 mb-10">Create Tags</h3>
+        <h4 class="text-info  mb-3">Create Sub Category</h4>
         <form asp-action="Create" method="post">
 
             <div class="p-4 rounded border">
-                <div asp-validation-summary="ModelOnly" class="text-danger">
-                </div>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group row">
-                    <div class="col-4">
+                    <div class="col-2">
                         <label asp-for="Name"></label>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6">
                         <input asp-for="Name" class="form-control" />
                     </div>
                     <span asp-validation-for="Name" class="text-danger"></span>
@@ -32,7 +31,7 @@
 
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <input type="submit" class="btn btn-primary" value="Save" />
                     <a asp-action="Index" class="btn btn-success">Back to List</a>
                 </div>
@@ -44,6 +43,8 @@
 
     <div class="col-lg-3"></div>
 
+</div>
+</div>
 </div>
 
 
