--- a/Areas/Admin/Views/SpecialTag/Details.cshtml
+++ b/Areas/Admin/Views/SpecialTag/Details.cshtml
@@ -2,31 +2,20 @@
 @{
     ViewData["Title"] = "Details";
 }
-<br />
-<br />
-<br />
-<br />
+<div class="container ">
+    <button class="btn btn-secondary ProductCategory-back-btn" onclick="window.history.back();">
+        <i class="fa-solid fa-arrow-left"></i> Back
+    </button>
 
+    <div class="container ProductCategory-container">
 <h4 class="text-info">Tag Details</h4>
-<div>
-    <br />
-    <br />
-    <br/>
-</div>
+
 <form asp-action="Details" method="post">
     <div class="p-4 rounded border">
         <div asp-validation-summary="ModelOnly" class="text-danger">
 
         </div>
-       @*  <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="ProductType"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="ProductType" readonly="readonly" class="form-control" />
-            </div>
-            <span asp-validation-for="ProductType" class="text-danger"></span>
-        </div> *@
+ 
 
         <dl class="row">
             <dt class="col-sm-6">
@@ -40,39 +29,18 @@
 
 
 
-        <div class="form-group">
+        <div class="form-group mt-3">
 
-           @*  <a asp-action="Edit" asp-route-id="@Model.Id" class="btn  btn-primary">Edit</a> *@
-            
             <a asp-action="Index" class="btn btn-success">Back to List</a>
 
-            @*<input type="submit" class="btn btn-success" value="Back to List" />*@
         </div>
     </div>
 </form>
 
+</div>
+</div>
 @section Scripts{
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 
-<br />
-@* 
-<div>
-    <h4>PersonInfo</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductType)
-        </dd>
-       
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
- *@
 
