--- a/Areas/Admin/Views/SpecialTag/Index.cshtml
+++ b/Areas/Admin/Views/SpecialTag/Index.cshtml
@@ -1,44 +1,50 @@
-﻿﻿@using OnlineShop.Models;
+﻿@using OnlineShop.Models;
 @model IEnumerable<SpecialTag>
 @{
     ViewData["Title"] = "Index";
 }
+<div class="container ">
+    <button class="btn btn-secondary ProductCategory-back-btn" onclick="window.history.back();">
+        <i class="fa-solid fa-arrow-left"></i> Back
+    </button>
 
-<br />
-<br />
-<br />
-<br />
-<div class="row">
-    <div class="col-cl-6">
-        <h2 class="text-info">Special Tag List</h2>
+<div class="container ProductCategory-container">
+    <div class="row align-items-center mb-4">
+        <div class="col-md-6">
+            <h4 class="text-info" style="font-size:25px">Sub Category List</h4>
+        </div>
+        <div class="col-md-6 text-md-right text-center">
+            <a asp-action="Create" class="btn btn-info mt-3 mt-md-0"><i class="fas fa-plus"></i> Add New Tag</a>
+        </div>
     </div>
-    <div class="col-6 text-right">
-        <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i> Add New Tag</a>
+
+    <div class="table-responsive">
+        <table class="table table-striped border">
+            <thead class="table-info">
+                <tr>
+                    <th>@Html.DisplayNameFor(c => c.Name)</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Name</td>
+                        <td>
+                            <partial name="_ButtonTag" model="@item.Id" />
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
-<br />
-<div>
-    <table class="table table-striped border">
-        <tr class="table-info">
-            <th>
-                @Html.DisplayNameFor(c => c.Name)
-            </th>
-            <th></th>
-            <th></th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Name</td>
-                <td>
-                    <partial name="_ButtonTag" model="@item.Id" />
-                </td>
-            </tr>
-        }
-    </table>
+
 </div>
 
-@section scripts{
+@section scripts {
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.2/build/alertify.min.js"></script>
     <script type="text/javascript">
         $(function () {
@@ -56,5 +62,4 @@
             }
         })
     </script>
-
 }
